deployment/base/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: java-spring-api
  labels:
    app: java-spring-api
spec:
  template:
    spec:
      terminationGracePeriodSeconds: 45
      containers:
      - name: spring-api
        image: sybrenbolandit/java-spring-api
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 8080
        - name: actuator
          containerPort: 8081
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 60
          periodSeconds: 5
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          periodSeconds: 5
          failureThreshold: 1
          successThreshold: 3
        volumeMounts:
        - name: application-config
          mountPath: /srv/app/application.properties
          subPath: application.properties
        - name: varlog
          mountPath: /var/log
      volumes:
      - name: application-config
        configMap:
          name: application-config
      - name: varlog
