deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-spring-api
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: java-spring-api
